# fectok24

./: .gitignore  FINAL_SUCCESS_V15.py  README.md  a_to_z_audit.py  absolute_dominance_rebirth.py  absolute_truth_audit.py  access_audit.py  ad_integration_roadmap.md  ai_foryou_roadmap.md  antigravity_deploy.py  apply_backend_fix.py  asset_isolation.py  atomic_pulse_restoration.py  atomic_source_sync.py  audit_build.py  audit_crash.py  audit_crash_v2.py  audit_mirrors.py  authvoltmount.md  backend_mapping.py  burj_watchdog_master.md  cata_auth.py  check_access.py  check_auth_routes.py  check_auth_state.py  check_backend_deep.py  check_brevo_error.py  check_bundle_urls.py  check_debug_logs.py  check_deps.py  check_docker_clean.py  check_docker_status.py  check_firewall.py  check_fixes.py  check_host.py  check_js_size.py  check_mismatch_diag.py  check_netstat.py  check_nginx_external.py  check_nginx_logs.py  (+185 more)
.agent/: MLM_V15_MANIFESTO.md  SOVEREIGN_REVENUE_DNA.md
Sovereign_Impression_Engine/: docker-compose.yml  index.html  main.py
Sovereign_Revenue_Control/: docker-compose.yml  index.html  main.py
Sovereign_Sound_Loop/: docker-compose.yml  index.html  main.py
Sovereign_Sponsor_System/: docker-compose.yml  index.html  main.py
admin_panel/: Dockerfile  README.md  pubspec.yaml
admin_web_v15/: index.html
backend/: DEBUG_CRASH.txt  Dockerfile  REMOTE_AI_AUDIT.py  REMOTE_MAIN_AUDIT.py  admin_audit_log.txt  admin_white_screen_debug.py  aggressive_route_fix_v2.py  aggressive_sync_fix.py  ai_engine.py  atomic_system_rebuild.py  audit_gmail_delivery.py  check_index.py  (+154 more)
(+136 files in other folders)
