[project]
name = "23226"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.6",
    "fastapi>=0.135.3",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "motor>=3.7.1",
    "paramiko>=4.0.0",
    "psutil>=7.2.2",
    "pynacl>=1.6.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn>=0.43.0",
]
